--- a/package.json
+++ b/package.json
@@ -1,3 +1,7 @@
 {
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "scripts": {
+    "version": "git add package.json",
+    "postversion": "git push && git push --tags"
+  }
 }
